fix z-index stack

--- a/css.css
+++ b/css.css
@@ -63,7 +63,7 @@ button {
 }
 #menu:checked+.screen{
   opacity: 1;
-  z-index: -10
+  z-index: 10
 }
 .menu {
   position: absolute;
